# zero-trust

./: .env.example  .gitignore  .gitleaks.toml  404.html  AGENTS.md  BEST-PRACTICES.md  CEH-cheatsheet.md  CLAUDE.md  CNAME  Dockerfile  README.md  SECURITY.md  checklist.html  comparison.html  compliance.html  docker-compose.yml  index.html  maturity.html  patch_js.diff  patch_search.diff  policy.html  privacy.html  processes.html  pyproject.toml  resets.html  resources.html  robots.txt  run_html5_validator.sh  sitemap.xml  sw.js  test_search.patch  test_ui.py  tools.html
.Jules/: palette.md
.gemini/: .gitignore
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  claude-agent.yml  claude-review.yml  dedupe-prs.yml  deploy.yml  freshness.yml  secret-scan.yml
Areas/: ai.html  cheatsheets.html  prompt-builder.html  tools.html
Areas/data/: prompts.js  tools.js
Projects/: index.html
Projects/Sec-labs/: index.html
Resources/: index.html
Sec-labs/docs/attacks/: ad-kerberoasting.html  buffer-overflow.html
Sec-labs/docs/tcm/practical-ethical-hacking/: eternalblue-lab.md
css/: index.css  maturity.css  resets.css  resources.css  style.css
cyberops-hub/: co-toolkit.js  cyber-ops.js  cyberops.html  interceptor.css  interceptor.html  interceptor.js  toolkit-ops.js
cyberops-hub/modules/: core-definitions.js  snippets-blue.js  snippets-red-1.js  snippets-red-2.js  ui-logic.js
js/: checklist.js  comparison.js  highlight.js  index.js  maturity.js  resets.js  resources-filter.js  search-data.js  search.js  theme.js  tools-filter.js  ui.js
src/zero_trust/: __init__.py  config.py  main.py
src/zero_trust/api/: dependencies.py
src/zero_trust/api/middleware/: __init__.py  logging.py  security.py
src/zero_trust/api/routes/: __init__.py  auth.py  health.py  policy.py  risk.py  threat_intel.py
src/zero_trust/core/: __init__.py  exceptions.py  security.py
src/zero_trust/domain/: __init__.py
src/zero_trust/domain/policy/: __init__.py  models.py  service.py
src/zero_trust/domain/risk/: __init__.py  models.py  service.py
src/zero_trust/domain/threat_intel/: __init__.py  models.py  (+1 more)
src/zero_trust/infrastructure/: __init__.py
(+6 files in other folders)
